<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.multilang2.MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_seleccion"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_en" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_es" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_fr" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/str_pt" />

    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/str_okbutton"
        android:onClick="Volver"/>


</LinearLayout>